--- a/Config.in
+++ b/Config.in
@@ -99,6 +99,9 @@ menu "Controllers"
 endmenu
 
 menu "Ports"
+  source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/32bit/bennugd-bgdc/Config.in"
+  source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/32bit/bennugd-bgdi/Config.in"
+  source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/32bit/droidports/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/abuse-data/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/abuse/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/alephone/Config.in"
