droidports partially working, sound issue to be resolved

--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
@@ -139,6 +139,9 @@ dos:
 dreamcast:
   emulator: libretro
   core:     flycast
+droidports:
+  emulator: droidports
+  core:     droidports
 easyrpg:
   emulator: easyrpg
   core:     easyrpg
