add openclaw (Captain Claw) port

--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -817,6 +817,9 @@ config BR2_PACKAGE_BATOCERA_PORTS_SYSTEMS
 
     # Alephone
     select BR2_PACKAGE_ALEPHONE                 if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
+    
+    # Captain Claw
+    select BR2_PACKAGE_OPENCLAW                 if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
 
     # 32bit applications
     select BR2_PACKAGE_LIB32BIT		  			if BR2_PACKAGE_BATOCERA_TARGET_RPI4 && BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
