--- a/Config.in
+++ b/Config.in
@@ -123,6 +123,7 @@ menu "Ports"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/hurrican/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/ionfury/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/nukem2/Config.in"
+  source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/openclaw/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/openjazz/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/openlara/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/omf2097/Config.in"
