--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
@@ -338,6 +338,9 @@ openbor:
   options:
     # none because some games fails by default with textures (street of rage 2x)
     bezel: none
+openclaw:
+  emulator: openclaw
+  core:     openclaw
 openjazz:
   emulator: openjazz
   core:     openjazz
