--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -580,11 +580,10 @@ config BR2_PACKAGE_BATOCERA_ARCADE_SYSTEMS
 
 
 	# Mainline MAME
-	select BR2_PACKAGE_MAME     if BR2_PACKAGE_BATOCERA_TARGET_X86_64
+	select BR2_PACKAGE_MAME     if BR2_PACKAGE_BATOCERA_TARGET_X86_64 || BR2_PACKAGE_BATOCERA_TARGET_RPI4
 
 	#MESS
-    select BR2_PACKAGE_LIBRETRO_MESS                if  BR2_PACKAGE_BATOCERA_TARGET_X86_64	|| \
-														BR2_PACKAGE_BATOCERA_TARGET_RPI4
+    #select BR2_PACKAGE_LIBRETRO_MESS                if  BR2_PACKAGE_BATOCERA_TARGET_X86_64	|| BR2_PACKAGE_BATOCERA_TARGET_RPI4
 
 	help
 		Arcade cores/emulators
