--- a/configs/batocera-rpi4_defconfig
+++ b/configs/batocera-rpi4_defconfig
@@ -72,6 +72,8 @@ BR2_PACKAGE_BATOCERA_SPLASH_MPV=y
 
 # gpu
 BR2_PACKAGE_BATOCERA_RPI_MESA3D=y
+BR2_PACKAGE_GL4ES=y
+BR2_PACKAGE_GLU=y
 
 # GPIO Kernel Module
 BR2_PACKAGE_MK_ARCADE_JOYSTICK_RPI=y
@@ -91,7 +93,7 @@ BR2_SYSTEM_BIN_SH_DASH=y # /bin/sh implementation; set here because a `choice` c
 # Batocera dev
 #BR2_PACKAGE_BATOCERA_DEV=y
 #BR2_PACKAGE_BATOCERA_DEBUG=y
-#BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL=y
+BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL=y
 
 # Enables ccache
 BR2_CCACHE=y
