--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
@@ -344,6 +344,12 @@ openclaw:
 openjazz:
   emulator: openjazz
   core:     openjazz
+openjkja:
+  emulator: openjkja
+  core:     openjkja
+openjkjo:
+  emulator: openjkjo
+  core:     openjkjo
 openlara:
   emulator: openlara
   core:     openlara
