--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -818,6 +818,9 @@ config BR2_PACKAGE_BATOCERA_PORTS_SYSTEMS
 
     # Captain Claw
     select BR2_PACKAGE_OPENCLAW                 if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
+    
+     # OpenJK: JediAcademy / Jedi Outcast
+    select BR2_PACKAGE_OPENJK                   if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
 
     # 32bit applications
     select BR2_PACKAGE_LIB32BIT		  			if BR2_PACKAGE_BATOCERA_TARGET_RPI4 && BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
