--- a/Config.in
+++ b/Config.in
@@ -109,6 +109,7 @@ menu "Ports"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/alephone/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/awgl/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/bermuda/Config.in"
+  source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/box64/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/bstone/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/cannonball/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/cdogs/Config.in"
