--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -824,6 +824,7 @@ config BR2_PACKAGE_BATOCERA_PORTS_SYSTEMS
 
     # 32bit applications
     select BR2_PACKAGE_LIB32BIT		  			if BR2_PACKAGE_BATOCERA_TARGET_RPI4 && BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
+    select BR2_PACKAGE_BOX64		  			if BR2_PACKAGE_BATOCERA_TARGET_RPI4 && BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
 
 	help
 		Ports
