set mgba as the default core for sgb

--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults-rpi4.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults-rpi4.yml
@@ -15,6 +15,9 @@ psp:
 gamecube:
   emulator: libretro
   core:     dolphin
+sgb
+  emulator: libretro
+  core:     mgba
 wii:
   emulator: libretro
   core:     dolphin
