--- a/Config.in
+++ b/Config.in
@@ -111,6 +111,7 @@ menu "Ports"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/bermuda/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/box64/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/bstone/Config.in"
+  source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/candc/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/cannonball/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/cdogs/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/cgenius/Config.in"
