--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
@@ -467,8 +467,8 @@ solarus:
   emulator: solarus
   core:     solarus
 sonicretro:
-  emulator: sonic2013
-  core:     sonic2013
+  emulator: soniccd
+  core:     soniccd
 sorr:
   emulator: sorr
   core:     sorr
