--- a/package/batocera/emulationstation/batocera-es-system/es_features.yml
+++ b/package/batocera/emulationstation/batocera-es-system/es_features.yml
@@ -4,7 +4,7 @@
 shared:
   cfeatures:
     hud:
-      archs_include: [x86, x86_64, rpi4]
+      archs_include: [x86, x86_64]
       prompt:      HEADS UP DISPLAY
       description: Show context-sensitive info over the game.
       choices:
