--- a/package/batocera/emulationstation/batocera-es-system/es_systems.yml
+++ b/package/batocera/emulationstation/batocera-es-system/es_systems.yml
@@ -1953,7 +1953,7 @@ model3:
   platform: model3, arcade
   emulators:
     supermodel:
-      supermodel: { requireAnyOf: [BR2_PACKAGE_SUPERMODEL, BR2_PACKAGE_SUPERMODEL_RPI4] }
+      supermodel: { requireAnyOf: [BR2_PACKAGE_SUPERMODEL] }
   comment_en: |
     ## SEGA MODEL 3 IMPORTANT INFO ##
 
