--- a/Config.in
+++ b/Config.in
@@ -106,6 +106,7 @@ menu "Ports"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/abuse-data/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/abuse/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/alephone/Config.in"
+  source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/avp/Config.in"  
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/awgl/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/bermuda/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/box64/Config.in"
