--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -825,7 +825,10 @@ config BR2_PACKAGE_BATOCERA_PORTS_SYSTEMS
     select BR2_PACKAGE_OPENJK                   if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
 
     # Red Alert / Tiberian Dawn (WIP)
-    #select BR2_PACKAGE_CANDC                    if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
+    #select BR2_PACKAGE_CANDC                   if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
+
+    # Alien vs Predator
+    #select BR2_PACKAGE_AVP                      if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
 
     # 32bit applications
     select BR2_PACKAGE_LIB32BIT		  			if BR2_PACKAGE_BATOCERA_TARGET_RPI4 && BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
