--- a/Config.in
+++ b/Config.in
@@ -116,6 +116,8 @@ menu "Ports"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/cdogs/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/cgenius/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/devilutionx/Config.in"
+  source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/doom/gzdoom/Config.in"
+  source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/doom/zmusic/Config.in"  
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/ecwolf/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/eduke32/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/f2bgl/Config.in"
