--- a/package/batocera/emulationstation/batocera-es-system/es_features.yml
+++ b/package/batocera/emulationstation/batocera-es-system/es_features.yml
@@ -5176,6 +5176,10 @@ freedroid:
 gsplus:
   features: [padtokeyboard, decoration]
   shared: [hud]
+  
+gzdoom:
+  features: [padtokeyboard, decoration]
+  shared: [hud]
 
 hcl:
   features: [padtokeyboard, decoration]
