--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
@@ -270,6 +270,9 @@ mame:
 mastersystem:
   emulator: libretro
   core:     genesisplusgx
+media:
+  emulator: libretro
+  core:     ffmpeg
 megadrive:
   emulator: libretro
   core:     genesisplusgx
