--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -757,6 +757,8 @@ config BR2_PACKAGE_BATOCERA_PORTS_SYSTEMS
 	select BR2_PACKAGE_OPENTYRIAN		        if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
 
 	select BR2_PACKAGE_LIBRETRO_GONG	        if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
+	
+	#select BR2_PACKAGE_LIBRETRO_FFMPEG	        if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
 
     #Quake 2
 	select BR2_PACKAGE_LIBRETRO_VITAQUAKE2	    if BR2_PACKAGE_BATOCERA_TARGET_X86_64  || \
