--- a/Config.in
+++ b/Config.in
@@ -144,6 +144,7 @@ menu "Ports"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/soniccd/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/spacecadetpinball/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/stuntcar/Config.in"
+  source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/tekwar/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/xash3d/hlsdk-xash3d/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/xash3d/hlsdk-xash3d-dmc/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/xash3d/hlsdk-xash3d-opfor/Config.in"
