--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -737,6 +737,7 @@ config BR2_PACKAGE_BATOCERA_PORTS_SYSTEMS
 	select BR2_PACKAGE_LIBRETRO_LOWRESNX        if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
 
 	select BR2_PACKAGE_EDUKE32       			if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
+	select BR2_PACKAGE_TEKWAR                   if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
 	select BR2_PACKAGE_IONFURY       			if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
 	select BR2_PACKAGE_NUKEM2                   if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
 
