--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
@@ -240,6 +240,10 @@ jaguar:
 j2me:
   emulator: libretro
   core:     freej2me
+jaxe:
+  emulator: libretro
+  core:     jaxe
+  
 kodi:
   emulator: kodi
   options:
