--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -938,8 +938,7 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
                                                         !BR2_PACKAGE_BATOCERA_TARGET_RPI2       && \
                                                         !BR2_PACKAGE_BATOCERA_TARGET_CHA        && \
                                                         !BR2_PACKAGE_BATOCERA_TARGET_RK3326     && \
-                                                        !BR2_PACKAGE_BATOCERA_TARGET_RPI3       && \
-                                                        !BR2_PACKAGE_BATOCERA_TARGET_RPI4   
+                                                        !BR2_PACKAGE_BATOCERA_TARGET_RPI3
 
 	select BR2_PACKAGE_LIBRETRO_SWANSTATION         if  !BR2_PACKAGE_BATOCERA_TARGET_X86	    && \
 	                                                    !BR2_PACKAGE_BATOCERA_TARGET_CHA        && \
@@ -1105,6 +1104,9 @@ config BR2_PACKAGE_BATOCERA_CONSOLE_SYSTEMS
 	# WASM-4
 	select BR2_PACKAGE_LIBRETRO_WASM                if !BR2_PACKAGE_BATOCERA_TARGET_CHA # speed issue on weak SBCs
 
+	# CHIP-8
+	select BR2_PACKAGE_LIBRETRO_JAXE                if !BR2_PACKAGE_BATOCERA_TARGET_CHA # speed issue on weak SBCs
+	
 	help
 		All avaible systems for the selected architecture
 
