--- a/package/batocera/emulationstation/batocera-es-system/es_features.yml
+++ b/package/batocera/emulationstation/batocera-es-system/es_features.yml
@@ -5286,7 +5286,11 @@ hurrican:
 ionfury:
   features: [padtokeyboard, decoration]
   shared: [hud]
-
+  
+kodi:
+  features: [padtokeyboard]
+  shared: []
+  
 lexaloffle:
   features: [padtokeyboard, decoration]
   shared: [hud]
