--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -190,8 +190,9 @@ config BR2_PACKAGE_BATOCERA_SYSTEM
 	select BR2_PACKAGE_RCLONE                               if BR2_PACKAGE_BATOCERA_TARGET_X86_64 # sync files in the cloud
 
 	# RaspberryPi Firmwares
-	select BR2_PACKAGE_RPI_WIFI_FIRMWARE        if BR2_PACKAGE_BATOCERA_RPI_ANY # rpi wifi firmware
-	select BR2_PACKAGE_RPI_BT_FIRMWARE          if BR2_PACKAGE_BATOCERA_RPI_ANY # rpi bluetooth firmware
+	#select BR2_PACKAGE_RPI_WIFI_FIRMWARE          if BR2_PACKAGE_BATOCERA_RPI_ANY # rpi wifi firmware
+	#select BR2_PACKAGE_RPI_BT_FIRMWARE            if BR2_PACKAGE_BATOCERA_RPI_ANY # rpi bluetooth firmware
+	selecr BR2_PACKAGE_BRCMFMAC_SDIO_FIRMWARE_RPI  if BR2_PACKAGE_BATOCERA_RPI_ANY
 
 	# Case
 	select BR2_PACKAGE_GPICASE              if BR2_PACKAGE_BATOCERA_TARGET_RPI1 || BR2_PACKAGE_BATOCERA_TARGET_RPIZERO2 # retroflag gpicase
