--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults-rpi4.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults-rpi4.yml
@@ -4,6 +4,7 @@ default:
     retroarch.menu_driver: rgui
     retroarch.audio_out_rate: 44100
     retroarch.video_max_swapchain_images: 1
+    retroarch.vrr_runloop_enable: false
 
 nds:
   emulator: drastic
