inital import of witchaven

--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
@@ -580,6 +580,9 @@ windows:
 windows_installers:
   emulator: wine
   core:     proton
+witchaven:
+  emulator: witchaven
+  core:     witchaven
 wswan:
   emulator: libretro
   core:     mednafen_wswan
