--- a/package/batocera/emulationstation/batocera-es-system/es_features.yml
+++ b/package/batocera/emulationstation/batocera-es-system/es_features.yml
@@ -5430,6 +5430,10 @@ voidsw:
   features: [padtokeyboard, decoration]
   shared: [hud]
 
+witchaven:
+  features: [padtokeyboard, decoration]
+  shared: [hud]
+
 xash3d_fwgs:
   features: [padtokeyboard]
 
