--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults-rpi4.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults-rpi4.yml
@@ -3,8 +3,8 @@ default:
     ratio: "full"
     retroarch.menu_driver: rgui
     retroarch.audio_out_rate: 44100
-    retroarch.video_max_swapchain_images: 1
     retroarch.vrr_runloop_enable: false
+    retroarch.video_vsync: true
 
 nds:
   emulator: drastic
