make video_max_swapchain_images = 3
By making video_max_swapchain_images = 3 some core have screen tearing issues, to overcome this experimatalpi recommend adding extra_transpose_buffer and upping the screen dpi rate.

--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults-rpi4.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults-rpi4.yml
@@ -4,7 +4,7 @@ default:
     retroarch.menu_driver: rgui
     retroarch.audio_out_rate: 44100
     retroarch.vrr_runloop_enable: false
-    retroarch.video_vsync: true
+    retroarch.video_max_swapchain_images: 3
 
 nds:
   emulator: drastic
