--- a/package/batocera/emulationstation/batocera-es-system/es_features.yml
+++ b/package/batocera/emulationstation/batocera-es-system/es_features.yml
@@ -54,7 +54,7 @@ global:
   shared: [hud, runahead, secondinstance, video_frame_delay_auto, vrr_runloop_enable, integerscale]
 
 libretro:
-  features: [ratio, framecount, showFPS, smooth, shaders, decoration, runahead, secondinstance, video_frame_delay_auto, game_translation]
+  features: [ratio, smooth, shaders, decoration, runahead, secondinstance, video_frame_delay_auto, game_translation]
   shared: [hud, vrr_runloop_enable, integerscale]
   cfeatures:
     gfxbackend:
@@ -102,6 +102,18 @@ libretro:
     lightgun_map:
         prompt:      CONTROLLER TO LIGHTGUN
         description: Map controller inputs to lightgun inputs
+        choices:
+            "On":   "true"
+            "Off":  "false"
+    framecount_show:
+        prompt:      FRAMECOUNT
+        description: Display the current frame counter.
+        choices:
+            "On":   "true"
+            "Off":  "false"
+    fps_show:
+        prompt:      FRAMERATE
+        description: Display the current frames per second.
         choices:
             "On":   "true"
             "Off":  "false"
