--- a/package/batocera/emulationstation/batocera-es-system/es_features.yml
+++ b/package/batocera/emulationstation/batocera-es-system/es_features.yml
@@ -4001,7 +4001,7 @@ duckstation:
                 "NeGcon (Rumble)":               NeGcon
 
 flycast:
-  features: [ratio, decoration]
+  features: [ratio, padtokeyboard, decoration]
   shared: [hud]
 
 fpinball:
