--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults-rpi3.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults-rpi3.yml
@@ -5,6 +5,8 @@ default:
     retroarch.audio_out_rate: 44100
     video_threaded: true
     audio_latency: 96
+    retroarch.vrr_runloop_enable: false
+    retroarch.video_max_swapchain_images: 3
 
 nds:
   emulator: drastic
