--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults-piboy3.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults-piboy3.yml
@@ -1,5 +1,8 @@
 default:
   options:
+    ratio: "full"
+    retroarch.menu_driver: rgui
+    retroarch.audio_out_rate: 44100
     video_threaded: true
     audio_latency: 96
     retroarch.vrr_runloop_enable: false
