enable video_adaptive_vsync by default

--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults-piboy3.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults-piboy3.yml
@@ -7,7 +7,8 @@ default:
     audio_latency: 96
     retroarch.vrr_runloop_enable: false
     retroarch.video_max_swapchain_images: 3
-
+    retroarch.video_adaptive_vsync: true
+    
 nds:
   emulator: drastic
   core:     drastic
