--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults-piboy4.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults-piboy4.yml
@@ -5,6 +5,7 @@ default:
     retroarch.audio_out_rate: 44100
     retroarch.vrr_runloop_enable: false
     retroarch.video_max_swapchain_images: 3
+    retroarch.video_adaptive_vsync: true
 
 nds:
   emulator: drastic
