--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -722,6 +722,9 @@ config BR2_PACKAGE_BATOCERA_PORTS_SYSTEMS
 
 	# Rick Dangerous
 	select BR2_PACKAGE_LIBRETRO_XRICK           if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
+	
+	# Jump n Bump
+	select BR2_PACKAGE_LIBRETRO_JUMPNBUMP           if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
 
 	# Flashback
 	select BR2_PACKAGE_LIBRETRO_REMINISCENCE    if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
