--- a/Config.in
+++ b/Config.in
@@ -45,6 +45,8 @@ menu "System"
   menu "Arch"
     source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/arch/firmware-rockpro64/Config.in"
     source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/arch/firmware-wlan-aml/Config.in"
+    source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/arch/rpi-eeprom/Config.in"
+    source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/arch/rpi-userland-batocera/Config.in"
   endmenu
 
   menu "Gpu"
