--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -194,6 +194,8 @@ config BR2_PACKAGE_BATOCERA_SYSTEM
 	select BR2_PACKAGE_BRCMFMAC_SDIO_FIRMWARE_RPI          if BR2_PACKAGE_BATOCERA_RPI_ANY
 	select BR2_PACKAGE_BRCMFMAC_SDIO_FIRMWARE_RPI_BT       if BR2_PACKAGE_BATOCERA_RPI_ANY
 	select BR2_PACKAGE_BRCMFMAC_SDIO_FIRMWARE_RPI_WIFI     if BR2_PACKAGE_BATOCERA_RPI_ANY
+	select BR2_PACKAGE_RPI_USERLAND_BATOCERA               if BR2_PACKAGE_BATOCERA_TARGET_RPI4
+	select BR2_PACKAGE_RPI_EEPROM                          if BR2_PACKAGE_BATOCERA_TARGET_RPI4	
 
 	# Case
 	select BR2_PACKAGE_GPICASE              if BR2_PACKAGE_BATOCERA_TARGET_RPI1 || BR2_PACKAGE_BATOCERA_TARGET_RPIZERO2 # retroflag gpicase
