--- a/Config.in
+++ b/Config.in
@@ -139,6 +139,7 @@ menu "Ports"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/prototype/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/rott/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/quake2/yquake2/Config.in"
+  source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/quake2/yquake2_refvk/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/quake2/yrogue/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/quake2/xatrix/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/quake3/Config.in"
