Add Super Tux Cart

--- a/Config.in
+++ b/Config.in
@@ -148,6 +148,7 @@ menu "Ports"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/sonic2013/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/soniccd/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/spacecadetpinball/Config.in"
+  source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/stk/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/stuntcar/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/tekwar/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/witchaven/Config.in"
