--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -845,6 +845,9 @@ config BR2_PACKAGE_BATOCERA_PORTS_SYSTEMS
 
     # OpenJK: JediAcademy / Jedi Outcast
     select BR2_PACKAGE_OPENJK                   if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
+   
+    # SuperTuxKart 
+    select BR2_PACKAGE_STK                     if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
 
     # Red Alert / Tiberian Dawn (WIP)
     #select BR2_PACKAGE_CANDC                   if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
