--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
@@ -526,6 +526,9 @@ superflappybirds:
 supergrafx:
   emulator: libretro
   core:     mednafen_supergrafx
+supertux2:
+  emulator: supertux2
+  core:     supertux2
 supervision:
   emulator: libretro
   core:     potator
