--- a/Config.in
+++ b/Config.in
@@ -150,6 +150,7 @@ menu "Ports"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/spacecadetpinball/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/stk/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/stuntcar/Config.in"
+  source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/supertux2/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/tekwar/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/witchaven/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/xash3d/hlsdk-xash3d/Config.in"
