--- a/package/batocera/emulationstation/batocera-es-system/es_features.yml
+++ b/package/batocera/emulationstation/batocera-es-system/es_features.yml
@@ -5435,6 +5435,10 @@ stk:
 stuntcar:
   features: [padtokeyboard, decoration]
   shared: [hud]
+  
+supertux2:
+  features: [padtokeyboard, decoration]
+  shared: [hud]
 
 vanillara:
   features: [padtokeyboard, decoration]
