--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults.yml
@@ -52,6 +52,9 @@ apple2:
 apple2gs:
   emulator: gsplus
   core:     gsplus
+arduous:
+  emulator: libretro
+  core:     arduous
 gsplus:
   emulator: gsplus
   core:     gsplus
