--- a/package/batocera/core/batocera-configgen/configs/configgen-defaults-rpi4.yml
+++ b/package/batocera/core/batocera-configgen/configs/configgen-defaults-rpi4.yml
@@ -1,7 +1,9 @@
 default:
   options:
+    retroarch.menu_driver: ozone
     retroarch.vrr_runloop_enable: false
     retroarch.video_max_swapchain_images: 3
+    retroarch.video_adaptive_vsync: true
     hud_support: true
 
 nds:
