--- a/package/batocera/emulationstation/batocera-es-system/es_features.yml
+++ b/package/batocera/emulationstation/batocera-es-system/es_features.yml
@@ -5618,6 +5618,10 @@ stuntcar:
 supertux2:
   features: [padtokeyboard, decoration]
   shared: [hud]
+  
+themehospital:
+  features: [padtokeyboard, decoration]
+  shared: [hud]
 
 vanillara:
   features: [padtokeyboard, decoration]
