--- a/Config.in
+++ b/Config.in
@@ -120,6 +120,7 @@ menu "Ports"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/cannonball/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/cdogs/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/cgenius/Config.in"
+  source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/corsixth/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/devilutionx/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/doom/gzdoom/Config.in"
   source "$BR2_EXTERNAL_BATOCERA_PATH/package/batocera/ports/doom/zmusic/Config.in"
