--- a/package/batocera/core/batocera-system/Config.in
+++ b/package/batocera/core/batocera-system/Config.in
@@ -880,6 +880,9 @@ config BR2_PACKAGE_BATOCERA_PORTS_SYSTEMS
     # Alien vs Predator
     #select BR2_PACKAGE_AVP                     if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
 
+    # Theme Hospital
+    select BR2_PACKAGE_CORSIXTH                   if  BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
+
     # 32bit applications
     select BR2_PACKAGE_LIB32BIT		  			if BR2_PACKAGE_BATOCERA_TARGET_RPI4 && BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
     select BR2_PACKAGE_BOX64		  			if BR2_PACKAGE_BATOCERA_TARGET_RPI4 && BR2_PACKAGE_BATOCERA_CORES_EXPERIMENTAL
